--- a/charts/rohit/templates/serviceaccount.yaml
+++ b/charts/rohit/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "new-chart.serviceAccountName" . }}
+  name: {{ include "rohit.serviceAccountName" . }}
   labels:
-    {{- include "new-chart.labels" . | nindent 4 }}
+    {{- include "rohit.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
