--- a/charts/rohit/templates/hpa.yaml
+++ b/charts/rohit/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "new-chart.fullname" . }}
+  name: {{ include "rohit.fullname" . }}
   labels:
-    {{- include "new-chart.labels" . | nindent 4 }}
+    {{- include "rohit.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "new-chart.fullname" . }}
+    name: {{ include "rohit.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
