--- a/charts/rohit/values.yaml
+++ b/charts/rohit/values.yaml
@@ -1,14 +1,14 @@
-# Default values for new-chart.
+# Default values for rohit.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 1
 
 image:
   repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: latest
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
